--- a/htdocs/langs/fr_FR/other.lang
+++ b/htdocs/langs/fr_FR/other.lang
@@ -194,7 +194,7 @@ MemberValidatedInDolibarr=Adhérent %s validé dans Dolibarr
 MemberResiliatedInDolibarr=Adhérent %s résilié dans Dolibarr
 MemberDeletedInDolibarr=Adhérent %s supprimé de Dolibarr
 MemberSubscriptionAddedInDolibarr=Souscription adhérent %s ajoutée dans Dolibarr
-ShipmentValidatedInDolibarr=Expédition %s validée dans Dolibarr
+ShipmentValidatedInDolibarr=Expédition %s validée, %s
 ##### Export #####
 Export=Export
 ExportsArea=Espace exports
