ajout module Margin  : possibilité de choisir PMP produit en tant que prix de revient + choix PMP par défaut => configuration du module

--- a/htdocs/langs/fr_FR/margins.lang
+++ b/htdocs/langs/fr_FR/margins.lang
@@ -48,3 +48,6 @@ Charges=Charges
 
 AgentContactType=Type de contact agent commercial
 AgentContactTypeDetails=Permet de définir le type de contact associé aux factures qui sera utilisé pour le rapport de marges par agent commercial
+
+DisplayPMPProduct=Permettre la sélection du PMP produit
+MargeUsePMPByDefault=______Utilisation du PMP par défaut
