--- a/htdocs/langs/en_US/orders.lang
+++ b/htdocs/langs/en_US/orders.lang
@@ -3,7 +3,7 @@ OrdersArea=Customers orders area
 SuppliersOrdersArea=Suppliers orders area
 OrderCard=Order card
 OrderId=Order Id
-Order=Aknowledgement of order
+Order=Acknowledgement of order
 Orders=Orders
 OrderLine=Order line
 OrderFollow=Follow up
