--- a/htdocs/langs/en_US/stocks.lang
+++ b/htdocs/langs/en_US/stocks.lang
@@ -47,6 +47,7 @@ PMPValue=Weighted average price
 PMPValueShort=WAP
 EnhancedValueOfWarehouses=Warehouses value
 UserWarehouseAutoCreate=Create a warehouse automatically when creating a user
+IndependantSubProductStock=Product stock and subproduct stock are independant
 QtyDispatched=Quantity dispatched
 OrderDispatch=Stock dispatching
 RuleForStockManagementDecrease=Rule for stock management decrease
