Correction liens création evenement 	modified:   ../../core/lib/company.lib.php

--- a/htdocs/langs/en_US/orders.lang
+++ b/htdocs/langs/en_US/orders.lang
@@ -12,7 +12,7 @@ OrderToProcess=Order to process
 NewOrder=New order
 ToOrder=Make order
 MakeOrder=Make order
-SupplierOrder=Supplier order
+SupplierOrder=Purchase order
 SuppliersOrders=Suppliers orders
 SuppliersOrdersRunning=Current suppliers orders
 CustomerOrder=Customer order
