Des modif chez le client, d'où ça sort ? :'(

--- a/htdocs/langs/fr_FR/bills.lang
+++ b/htdocs/langs/fr_FR/bills.lang
@@ -351,7 +351,7 @@ PaymentByChequeOrderedTo=Règlement TTC par chèque à l'ordre de %s envoyé à
 PaymentByChequeOrderedToShort=Règlement TTC par chèque à l'ordre de
 SendTo=envoyé à
 PaymentByTransferOnThisBankAccount=Règlement par virement sur le compte bancaire suivant
-VATIsNotUsedForInvoice=* TVA non applicable art-293B du CGI
+VATIsNotUsedForInvoice=Association non assujetie à la TVA (article L 261-4-4 du CGI)
 LawApplicationPart1=Par application de la loi 80.335 du 12/05/80
 LawApplicationPart2=les marchandises demeurent la propriété du
 LawApplicationPart3=vendeur jusqu'à complet encaissement de 
