NEW : onglet “Produit virtuel” renommé en “Nomenclature”

--- a/htdocs/langs/fr_FR/products.lang
+++ b/htdocs/langs/fr_FR/products.lang
@@ -118,7 +118,8 @@ MultiPricesAbility=Plusieurs niveaux de prix par produit/service
 MultiPricesNumPrices=Nombre de prix
 MultiPriceLevelsName=Catégorie de prix
 AssociatedProductsAbility=Prise en charge des produits virtuels/packs
-AssociatedProducts=Produit virtuel/package
+#AssociatedProducts=Produit virtuel/package
+AssociatedProducts=Nomenclature
 AssociatedProductsNumber=Nbre de sous-produits constituant ce produit virtuel/package
 ParentProductsNumber=Nbre de produits virtuels/packages parent
 IfZeroItIsNotAVirtualProduct=Si 0, ce produit n'est pas un produit virtuel/package
