--- a/htdocs/langs/fr_FR/companies.lang
+++ b/htdocs/langs/fr_FR/companies.lang
@@ -411,3 +411,4 @@ ConfirmCreationContactOtherContact=Il y a des contacts avec l'email :
 UpdateAdressContact=MAJ l'adresse des contact avec celle du tier
 SelectContactToUpdateAdress=Selectionner les contacts à mettre à jour
 ConfirmUpdateContactAdress=Confirmer la mise à jour
+LastCustomersSessionBills=Factures de session payées par des tiers
