add change status into agande list action

--- a/htdocs/langs/fr_FR/agenda.lang
+++ b/htdocs/langs/fr_FR/agenda.lang
@@ -79,3 +79,4 @@ ExtSitesNbOfAgenda=Nombre de calendriers
 AgendaExtNb=Calendrier no %s
 ExtSiteUrlAgenda=Url d'accès au fichier ical
 ExtSiteNoLabel=Aucune description
+ChangeStatusTo=Changer le statut %s
