--- a/htdocs/langs/fr_FR/companies.lang
+++ b/htdocs/langs/fr_FR/companies.lang
@@ -82,7 +82,7 @@ Poste= Poste
 DefaultLang=Langue par défaut
 VATIsUsed=Assujetti à la TVA
 VATIsNotUsed=Non assujetti à la TVA
-CopyAddressFromSoc=Remplir avec l'adresse du tiers
+CopyAddressFromSoc=Reprendre l'adresse de la société
 NoEmailDefined=Aucun email défini
 ##### Local Taxes #####
 LocalTax1IsUsedES= Assujetti à RE
