modification objet mail envoi propal

--- a/htdocs/langs/fr_FR/commercial.lang
+++ b/htdocs/langs/fr_FR/commercial.lang
@@ -44,7 +44,7 @@ DoneActions=Liste des événements réalisés
 DoneActionsFor=Liste des événements réalisés pour %s
 ToDoActions=Liste des événements incomplets
 ToDoActionsFor=Liste des événements incomplets pour %s
-SendPropalRef=Envoi proposition commerciale %s
+SendPropalRef=Bourguignon - Offre de prix %s
 SendOrderRef=Envoi commande %s
 StatusNotApplicable=Non applicable
 StatusActionToDo=À faire
