--- a/htdocs/langs/fr_FR/projects.lang
+++ b/htdocs/langs/fr_FR/projects.lang
@@ -118,6 +118,7 @@ TypeContact_project_internal_PROJECTLEADER=Chef de projet
 TypeContact_project_external_PROJECTLEADER=Chef de projet
 TypeContact_project_internal_PROJECTCONTRIBUTOR=Contributeur
 TypeContact_project_external_PROJECTCONTRIBUTOR=Contributeur
+TypeContact_project_external_PRESCRIPTOR=Prescripteur
 TypeContact_project_task_internal_TASKEXECUTIVE=Responsable
 TypeContact_project_task_external_TASKEXECUTIVE=Responsable
 TypeContact_project_task_internal_TASKCONTRIBUTOR=Contributeur
